<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/AppTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="80dp"
            android:layout_marginStart="37dp"
            android:text="@string/book_store"
            android:textColor="@color/colorBlack"
            android:textSize="35sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="2dp"
            android:layout_marginStart="37dp"
            android:text="@string/account"
            android:textColor="@color/colorBlack"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="37dp"
            android:text="@string/with"
            android:textSize="15sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="37dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="37dp"
            android:background="@drawable/rectangle_edittext_click"
            android:fontFamily="sans-serif"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="32.5dp"
            android:paddingTop="16.5dp"
            android:paddingBottom="15.5dp"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBlack"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="37dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="37dp"
            android:background="@drawable/rectangle_edittext_click"
            android:fontFamily="sans-serif"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="32.5dp"
            android:paddingTop="16.5dp"
            android:paddingBottom="15.5dp"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBlack"
            android:textSize="15sp" />


        <!--        <com.google.android.material.textfield.TextInputLayout-->
        <!--            android:id="@+id/editEmail"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="15dp"-->
        <!--            android:layout_marginLeft="10dp"-->
        <!--            app:boxStrokeColor="@color/colorAccent"-->
        <!--            android:layout_marginRight="10dp"-->
        <!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">-->

        <!--            <com.google.android.material.textfield.TextInputEditText-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:hint="Email"-->
        <!--                android:inputType="textEmailAddress"-->
        <!--                android:maxLines="1"-->
        <!--                android:maxLength="40"-->
        <!--                android:nextFocusRight="@id/editPassword"-->
        <!--                android:imeOptions="actionNext"/>-->

        <!--        </com.google.android.material.textfield.TextInputLayout>-->

        <!--        <com.google.android.material.textfield.TextInputLayout-->
        <!--            android:id="@+id/editPassword"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="15dp"-->
        <!--            android:layout_marginBottom="15dp"-->
        <!--            android:layout_marginLeft="10dp"-->
        <!--            app:boxStrokeColor="@color/colorAccent"-->
        <!--            android:layout_marginRight="10dp"-->
        <!--            app:passwordToggleEnabled="true"-->
        <!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">-->

        <!--            <com.google.android.material.textfield.TextInputEditText-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:inputType="textPassword"-->
        <!--                android:hint="@string/password"-->
        <!--                android:maxLines="1"-->
        <!--                android:maxLength="20"-->
        <!--                android:imeOptions="actionDone"-->
        <!--                />-->

        <!--        </com.google.android.material.textfield.TextInputLayout>-->


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/forgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="200dp"
                android:layout_marginBottom="10dp"
                android:text="@string/forgot_password"
                android:textSize="15sp" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/forgetPassword"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/border"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />

<!--            <ProgressBar-->
<!--                android:id="@+id/progressBar"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_centerHorizontal="true"-->
<!--                android:elevation="4dp"-->
<!--                android:indeterminate="true"-->
<!--                android:visibility="gone"-->
<!--                tools:visibility="visible" />-->

        </RelativeLayout>

        <TextView
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/not_registered_sign_up"
            android:textSize="15sp" />


    </LinearLayout>

</ScrollView>

